--- a/index.css
+++ b/index.css
@@ -78,7 +78,7 @@ body {
 /*===========Header============*/
 .header-block__container {
     padding-top: 24px;
-    border-radius: 24px;
+
     display: flex;
     align-items: center;
     column-gap: 20px;
@@ -110,7 +110,7 @@ body {
     background: rgba(6, 23, 44, 0.08);
 }
 
-.search-wrapper__container  input {
+.search-input {
     width: 100%;
     height: 100%;
     background: transparent;
