--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ body {
     color: #06172c;
     background: #faf6f6;
 
-    font-family: Poppins;
+    font-family: Poppins, serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 1;
@@ -69,9 +69,8 @@ body {
 .container {
     border-radius: 24px;
 
-    margin: 0px auto;
-    padding: 0px 20px;
-    border-radius: 24px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 
 
@@ -127,12 +126,29 @@ body {
 .cards-block__card {
     border-radius: 24px;
     display: flex;
-    align-items: start;
+
+    column-gap: 16px;
     box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.12);
     background: #fff;
 }
 
-юcards-block__card-img {
-    width: 100%;
-    object-fit: contain;
+.cards-block__card-img {
+
+}
+
+.cards-block__card-text {
+    padding: 16px;
+    font-weight: 600;
+    font-size: 22px;
+}
+
+.cards-block__card-name::after {
+    content: "";
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background-image: url('/images/Vector.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-left: 7px;
 }
