--- a/index.css
+++ b/index.css
@@ -127,7 +127,7 @@ body {
     border-radius: 24px;
     display: flex;
 
-    column-gap: 16px;
+
     box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.12);
     background: #fff;
 }
@@ -137,6 +137,8 @@ body {
 }
 
 .cards-block__card-text {
+    display: flex;
+    flex-direction: column;
     padding: 16px;
     font-weight: 600;
     font-size: 22px;
@@ -151,4 +153,29 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     margin-left: 7px;
+}
+
+.cards-block__card-description {
+    margin-top: 8px;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(6, 23, 44, 0.6);
+}
+
+.cards-block__card-location {
+    margin-top: 16px;
+    display: flex;
+    align-items: center;
+    gap:4px;
+    font-weight: 400;
+    font-size: 14px;
+    color: #06172c;
+}
+
+.cards-block__card-location::before {
+    content: "";
+    background: url(/images/bxs_map.svg);
+    flex-shrink: 0;
+    width: 16px;
+    height: 17px;
 }
