--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ body {
     height: 100%;
     color: #06172c;
     background: #faf6f6;
-    font-family: Poppins, sans-serifы;
+    font-family: Poppins, sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 1;
@@ -119,6 +119,11 @@ body {
     margin-top: 34px;
 }
 
+.cards-block__container .cards-block__card:not(:first-child) {
+    margin-top: 24px;
+
+}
+
 .cards-block__card {
     border-radius: 24px;
     display: flex;
@@ -156,15 +161,31 @@ body {
     font-size: 22px;
 }
 
-.cards-block__card-name::after {
-    content: "";
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url('/images/Vector.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-left: 7px;
+.cards-block__card-title {
+    display: flex;
+    column-gap: 9px;
+}
+
+.girl  {
+    width: 11px;
+    height: 15px;
+}
+
+.girl img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.boy  {
+    width: 13px;
+    height: 13px;
+}
+
+.boy img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .cards-block__card-description {
